wasm/genomic_rand_seq_extra_chars_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_v_qv2h7_/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/406f1a3b5072a8c3e72a6a6235da8e65695a2a8a.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/406f1a3b5072a8c3e72a6a6235da8e65695a2a8a.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/9abf76ace787700cc344f6900681886e1094f18c.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/9abf76ace787700cc344f6900681886e1094f18c.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/ca02e855a0e523b6f7cddb7cd866b6be838dfc4e.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/ca02e855a0e523b6f7cddb7cd866b6be838dfc4e.json" for subsequent builds)
cache:INFO:  - ok
